while else included

--- a/trial.ipynb
+++ b/trial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled120.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjfXW6rzmy3P05QLvEsZg2",
+      "authorship_tag": "ABX9TyNQFXfBLtN4no4ZaSlOcY8G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jghORn2gaiDB",
-        "outputId": "2c525cd9-2afc-40e0-a062-96798f73a169",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c525cd9-2afc-40e0-a062-96798f73a169"
       },
       "source": [
         "!python --version"
@@ -51,10 +51,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CahZrPVzaiz7",
-        "outputId": "013f6324-0d5b-4b52-b774-b61c632452da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "013f6324-0d5b-4b52-b774-b61c632452da"
       },
       "source": [
         "num=5\r\n",
@@ -76,11 +76,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y4uvuilRKF4x",
-        "outputId": "7c26c19d-79f1-4a32-c40f-58027b60e57d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y4uvuilRKF4x",
+        "outputId": "7c26c19d-79f1-4a32-c40f-58027b60e57d"
       },
       "source": [
         "num=5\r\n",
@@ -103,11 +103,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KsMrzOYuKtCd",
-        "outputId": "19017a04-5259-4a2d-a61a-5f66c1727a12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KsMrzOYuKtCd",
+        "outputId": "19017a04-5259-4a2d-a61a-5f66c1727a12"
       },
       "source": [
         "num=6\r\n",
@@ -132,11 +132,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VnpX5rD7LMkg",
-        "outputId": "c9af815f-ab06-4fee-be82-6612327f8d7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VnpX5rD7LMkg",
+        "outputId": "c9af815f-ab06-4fee-be82-6612327f8d7b"
       },
       "source": [
         "num=4\r\n",
@@ -162,11 +162,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Udy_L-7wMURk",
-        "outputId": "fa74cd23-07bb-4972-cc43-0629ba947de6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Udy_L-7wMURk",
+        "outputId": "fa74cd23-07bb-4972-cc43-0629ba947de6"
       },
       "source": [
         "num=2\r\n",
@@ -194,28 +194,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NQLjPcvvPBRc",
-        "outputId": "d3335056-d11d-444a-b784-4ffea7d4114e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NQLjPcvvPBRc",
+        "outputId": "6d03df83-1ac5-429e-e759-491fd0515188"
       },
       "source": [
-        "num=5\r\n",
-        "if num >= 0:\r\n",
-        "    if num == 0:\r\n",
-        "        print(\"Zero\")\r\n",
+        "if num!=0:\r\n",
+        "  if num%2==0:\r\n",
+        "    print(\"Number entered is even\")\r\n",
+        "    if(num==2):\r\n",
+        "      print(\"Number is the smallest even number\")\r\n",
         "    else:\r\n",
-        "        print(\"Positive number\")\r\n",
-        "else:\r\n",
-        "    print(\"Negative number\")"
+        "      print(\"number is not the smallest even number\")\r\n",
+        "  else:\r\n",
+        "    print(\"number entered is odd\")"
       ],
-      "execution_count": 60,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Positive number\n"
+            "number entered is odd\n"
           ],
           "name": "stdout"
         }
@@ -224,7 +225,95 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fzzKrUhOPlfZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fzzKrUhOPlfZ",
+        "outputId": "6a0bb15c-9325-4b29-fa12-f741153fa6ac"
+      },
+      "source": [
+        "n=10\r\n",
+        "summation=0\r\n",
+        "while(n>=0):\r\n",
+        "  summation+=n\r\n",
+        "  n=n-1\r\n",
+        "print(summation)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f_bU_tGGa4Kb",
+        "outputId": "a1e0cb79-7c6a-468b-8365-0bf1c7dc7de0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "i=2\r\n",
+        "while(i==2):\r\n",
+        "  i=3\r\n",
+        "  print(\"The value of i is \"+str(i))\r\n",
+        "else:\r\n",
+        "  print(\"I am inside else block\")\r\n"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The value of i is 3\n",
+            "I am inside else block\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kah_owPWyvQx",
+        "outputId": "35e18eec-48f6-46a2-f210-515d0a7c627f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "i=2\r\n",
+        "while(i==2):\r\n",
+        "  i=3\r\n",
+        "  print(\"The value of i is \"+str(i))\r\n",
+        "  print(\"I am just about to execute break statement\")\r\n",
+        "  break\r\n",
+        "else:\r\n",
+        "  print(\"I am inside else block\")"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The value of i is 3\n",
+            "I am just about to execute break statement\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AyBdF5lzy_ck"
       },
       "source": [
         ""
