--- a/data type.ipynb
+++ b/data type.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copy of Untitled121.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPF5hOBRur/x4C/CNIhfwhn",
+      "authorship_tag": "ABX9TyO5OwIGSYyk9n2KnmvYaWx3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMzqce-XBjS3",
-        "outputId": "68711a86-6eb9-4f18-80bf-14dec8113daa"
+        "outputId": "b1b4aa99-1e4b-4b65-963f-6e481d6fe5e5"
       },
       "source": [
         "#python numbers are int,float, complex\r\n",
@@ -40,7 +40,7 @@
         "print(a)\r\n",
         "id(a)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,13 +53,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "94067421366880"
+              "93938397018720"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 129
+          "execution_count": 3
         }
       ]
     },
@@ -70,14 +70,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YD4Ml9JAB2z2",
-        "outputId": "08195c4a-c53b-47ed-ed80-970d77258b01"
+        "outputId": "e2811c63-f82a-4944-8b57-fb0ecbc497f5"
       },
       "source": [
         "b=float(4)\r\n",
         "type(b)\r\n",
         "print(b)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,14 +95,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ZxRWu8qB5sc",
-        "outputId": "edfe6efe-0786-4e46-8357-e44b6f9b8bc2"
+        "outputId": "e50d9ec6-5211-4e21-81f5-ad166584cac7"
       },
       "source": [
         "c=int(4.2)\r\n",
         "type(c)\r\n",
         "print(c)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBeyEVFeB8cy",
-        "outputId": "9456ce22-1f9a-4c17-bd30-b4273f6fe18b"
+        "outputId": "2f80ecf2-3e6a-4290-80a3-2e2dced563fb"
       },
       "source": [
         "import cmath\r\n",
@@ -139,7 +139,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AJ29CTdnB_Yh",
-        "outputId": "b7c178ed-447b-4d7f-a208-f702bd554ca7"
+        "outputId": "34e15c70-5fd2-447d-a3d6-18bcdf666d68"
       },
       "source": [
         "z=1+1j\r\n",
@@ -169,7 +169,7 @@
         "print(w)\r\n",
         "type(w)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 7
         }
       ]
     },
@@ -199,13 +199,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SP_ovFwdFXNc",
-        "outputId": "b91961e6-bbbf-42d9-ab34-cfe8addeea40"
+        "outputId": "137d6155-3f84-4db0-fa1e-bf952d8d664e"
       },
       "source": [
         "w = cmath.rect(1.4142135623730951, 0.7853981633974483) \r\n",
         "type(w)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 8
         }
       ]
     },
@@ -228,7 +228,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAWJtIZoFlTZ",
-        "outputId": "836bf08d-2485-4490-beee-7f4aa29859cf"
+        "outputId": "11ca43bb-887a-4f88-de2c-bb5e3dd2b952"
       },
       "source": [
         "number_of_z=0\r\n",
@@ -237,7 +237,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,14 +267,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E-PWmDXHJXAQ",
-        "outputId": "c9896949-7bda-441b-85ed-9574f267f1fc"
+        "outputId": "d6c4ed9b-42d4-4f3b-b2b3-961dec1f9fca"
       },
       "source": [
         "str1=\"Plight of animals\"\r\n",
         "print(\"ani\" in str1)\r\n",
         "print(\"ani\" not in str1)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,15 +293,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VAyvv3C_OLmG",
-        "outputId": "2516bdfd-4404-4d0b-d9ad-3246abce5001"
+        "outputId": "8558f6d8-44e7-4503-8648-35f3dcb399c9"
       },
       "source": [
         "str1=\"This is the first string\"\r\n",
         "str2=\"This is the second string\"\r\n",
-        "str=str1+\" and \"+str2\r\n",
-        "print(str)"
+        "str3=str1+\" and \"+str2\r\n",
+        "print(str3)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,14 +319,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHrEYuYMOcOA",
-        "outputId": "58b6d89e-d768-43f6-9706-8a72280407a2"
+        "outputId": "d60151dc-19dc-465e-bc7d-6637e1769675"
       },
       "source": [
         "str1=\"012345678\"\r\n",
         "modified_str=str1[:7] #upto 5th character \r\n",
         "print(modified_str)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,12 +344,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcYGrZrCO7Ge",
-        "outputId": "bb7b618a-75c0-49d9-c634-42da017c9f30"
+        "outputId": "ee325ee6-8b9b-4fa5-f2cf-90b314d93751"
       },
       "source": [
         "print(str1[1:7])"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +367,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ni25J8ljQwpT",
-        "outputId": "fce9494e-f96e-463c-f39a-00123c8e9590"
+        "outputId": "9e68999b-167e-43b3-f8d3-4a17a58e5351"
       },
       "source": [
         "print(str1[:-1])"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,12 +390,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gZWVGZpvQ-ZY",
-        "outputId": "ac5690a2-1f7f-4cdc-8603-6ff5ec48bc97"
+        "outputId": "17f58068-d407-4fac-d729-0c9b696c7d63"
       },
       "source": [
         "print(str1[0:7:2])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,13 +413,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p8J4o62RMA9",
-        "outputId": "9acd59ef-de63-4154-80c4-ed78fe80e673"
+        "outputId": "5d794055-7a69-408b-f8e8-6a228a68d378"
       },
       "source": [
         "#simple reversing the string\r\n",
         "print(str1[8:0:-1])"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,13 +438,13 @@
           "height": 35
         },
         "id": "lM6R1zgUXuOp",
-        "outputId": "74396afe-d748-4f36-eda9-7b3eaa750872"
+        "outputId": "47188d64-9098-4f32-ee9a-590db3f3da42"
       },
       "source": [
         "str1=\" This is my first python string \"\r\n",
         "str1.upper()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 143
+          "execution_count": 17
         }
       ]
     },
@@ -471,12 +471,12 @@
           "height": 35
         },
         "id": "fWOjCYFRX66O",
-        "outputId": "f97d42dc-6a88-48d2-a187-0002cae68736"
+        "outputId": "f6c044d2-2e36-410b-de6d-9da14a9e034a"
       },
       "source": [
         "str1.upper().lower()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 144
+          "execution_count": 18
         }
       ]
     },
@@ -534,12 +534,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v7OhCILKY_LR",
-        "outputId": "f23564da-a628-45ca-e6ef-0d5eb208e206"
+        "outputId": "cd0a454a-8f7f-4406-e383-3cac07ceb0a9"
       },
       "source": [
         "print(str1.replace(\"first\", \"second\"))"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,12 +557,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TJQ0peAvfOE5",
-        "outputId": "7de6ab3e-49c4-4fcf-e829-02a6aa963523"
+        "outputId": "a28dc152-9462-4fc1-bb42-d3877bd1b4c0"
       },
       "source": [
         "print(str1)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,13 +581,13 @@
           "height": 185
         },
         "id": "j7jYsyYLfQUs",
-        "outputId": "c0f5483b-cd9c-46a7-eb2b-8b09c50730d3"
+        "outputId": "6e952939-f74c-4d68-d4ba-e8b27ce0292b"
       },
       "source": [
         "quantity=2\r\n",
         "str1=\"the number of candies available is \"+str(quantity)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "error",
@@ -596,7 +596,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-149-ddbbbca9da89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mquantity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstr1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"the number of candies available is \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquantity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-21-ddbbbca9da89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mquantity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstr1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"the number of candies available is \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquantity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
           ]
         }
