--- a/data type.ipynb
+++ b/data type.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Copy of Untitled121.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5OwIGSYyk9n2KnmvYaWx3",
+      "authorship_tag": "ABX9TyMLXM49lVvliqQdnCFle9BR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YMzqce-XBjS3",
-        "outputId": "b1b4aa99-1e4b-4b65-963f-6e481d6fe5e5"
+        "outputId": "dcfdbdb9-1cf0-4fff-a6bf-f30e4a05ac5f"
       },
       "source": [
         "#python numbers are int,float, complex\r\n",
@@ -53,7 +53,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "93938397018720"
+              "94345064655456"
             ]
           },
           "metadata": {
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YD4Ml9JAB2z2",
-        "outputId": "e2811c63-f82a-4944-8b57-fb0ecbc497f5"
+        "outputId": "88597404-e55a-40b1-da9d-ec84db8b95d9"
       },
       "source": [
         "b=float(4)\r\n",
@@ -95,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ZxRWu8qB5sc",
-        "outputId": "e50d9ec6-5211-4e21-81f5-ad166584cac7"
+        "outputId": "8da2e257-ca7f-479c-80e3-143e13a4421a"
       },
       "source": [
         "c=int(4.2)\r\n",
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBeyEVFeB8cy",
-        "outputId": "2f80ecf2-3e6a-4290-80a3-2e2dced563fb"
+        "outputId": "b3799f6d-2f4c-487e-dfc6-2b18fd37766b"
       },
       "source": [
         "import cmath\r\n",
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AJ29CTdnB_Yh",
-        "outputId": "34e15c70-5fd2-447d-a3d6-18bcdf666d68"
+        "outputId": "14934864-d29d-421e-cac7-71329189d1cf"
       },
       "source": [
         "z=1+1j\r\n",
@@ -199,7 +199,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SP_ovFwdFXNc",
-        "outputId": "137d6155-3f84-4db0-fa1e-bf952d8d664e"
+        "outputId": "3cdf7ae3-935d-4f82-809d-3334618a411f"
       },
       "source": [
         "w = cmath.rect(1.4142135623730951, 0.7853981633974483) \r\n",
@@ -228,7 +228,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAWJtIZoFlTZ",
-        "outputId": "11ca43bb-887a-4f88-de2c-bb5e3dd2b952"
+        "outputId": "3705517d-9717-43bc-b593-8cee9e3a91d4"
       },
       "source": [
         "number_of_z=0\r\n",
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E-PWmDXHJXAQ",
-        "outputId": "d6c4ed9b-42d4-4f3b-b2b3-961dec1f9fca"
+        "outputId": "deac3570-ef2a-487f-bcae-8168f8ddb1db"
       },
       "source": [
         "str1=\"Plight of animals\"\r\n",
@@ -293,7 +293,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VAyvv3C_OLmG",
-        "outputId": "8558f6d8-44e7-4503-8648-35f3dcb399c9"
+        "outputId": "7085e7cb-5782-4af5-e1f9-4629bec328d0"
       },
       "source": [
         "str1=\"This is the first string\"\r\n",
@@ -301,7 +301,7 @@
         "str3=str1+\" and \"+str2\r\n",
         "print(str3)"
       ],
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,11 +319,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JHrEYuYMOcOA",
-        "outputId": "d60151dc-19dc-465e-bc7d-6637e1769675"
+        "outputId": "3c3e160d-e1e4-47b1-cfdb-d163baab9b1e"
       },
       "source": [
         "str1=\"012345678\"\r\n",
-        "modified_str=str1[:7] #upto 5th character \r\n",
+        "modified_str=str1[:7] #upto 7th character \r\n",
         "print(modified_str)"
       ],
       "execution_count": 12,
@@ -344,7 +344,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcYGrZrCO7Ge",
-        "outputId": "ee325ee6-8b9b-4fa5-f2cf-90b314d93751"
+        "outputId": "6f3155ab-af0c-4248-c649-bc44c06e1a80"
       },
       "source": [
         "print(str1[1:7])"
@@ -367,7 +367,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ni25J8ljQwpT",
-        "outputId": "9e68999b-167e-43b3-f8d3-4a17a58e5351"
+        "outputId": "0b4309d5-77d2-438f-cf49-0ace3348e13c"
       },
       "source": [
         "print(str1[:-1])"
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gZWVGZpvQ-ZY",
-        "outputId": "17f58068-d407-4fac-d729-0c9b696c7d63"
+        "outputId": "e0b0a6d2-9d47-4a64-bd6a-4da558b780f7"
       },
       "source": [
         "print(str1[0:7:2])"
@@ -413,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p8J4o62RMA9",
-        "outputId": "5d794055-7a69-408b-f8e8-6a228a68d378"
+        "outputId": "eee81c8a-4d0a-4bfe-d96e-5b0d917d6995"
       },
       "source": [
         "#simple reversing the string\r\n",
@@ -438,7 +438,7 @@
           "height": 35
         },
         "id": "lM6R1zgUXuOp",
-        "outputId": "47188d64-9098-4f32-ee9a-590db3f3da42"
+        "outputId": "6a597e3d-0814-4e37-f369-f2bf5a84953a"
       },
       "source": [
         "str1=\" This is my first python string \"\r\n",
@@ -471,7 +471,7 @@
           "height": 35
         },
         "id": "fWOjCYFRX66O",
-        "outputId": "f6c044d2-2e36-410b-de6d-9da14a9e034a"
+        "outputId": "99f0f616-9123-4acd-8ba1-682f43e18cff"
       },
       "source": [
         "str1.upper().lower()"
@@ -503,12 +503,12 @@
           "height": 35
         },
         "id": "Dl_HIzfdY5pO",
-        "outputId": "7a9c7400-e786-4970-ed89-81e21b1ab1a3"
+        "outputId": "ab607cae-ab55-4e90-d92e-2e31d7b3c0e1"
       },
       "source": [
         "str1.strip() #removes white space at the begining and end of the string"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 145
+          "execution_count": 19
         }
       ]
     },
@@ -534,12 +534,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v7OhCILKY_LR",
-        "outputId": "cd0a454a-8f7f-4406-e383-3cac07ceb0a9"
+        "outputId": "a45afff3-cbf4-43fd-8c0b-97a4c723be25"
       },
       "source": [
         "print(str1.replace(\"first\", \"second\"))"
       ],
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,12 +557,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TJQ0peAvfOE5",
-        "outputId": "a28dc152-9462-4fc1-bb42-d3877bd1b4c0"
+        "outputId": "d660c38c-3e7a-4875-9dce-9de91a91515d"
       },
       "source": [
         "print(str1)"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,31 +576,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
-        },
-        "id": "j7jYsyYLfQUs",
-        "outputId": "6e952939-f74c-4d68-d4ba-e8b27ce0292b"
+        "id": "j7jYsyYLfQUs"
       },
       "source": [
         "quantity=2\r\n",
         "str1=\"the number of candies available is \"+str(quantity)"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-ddbbbca9da89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mquantity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstr1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"the number of candies available is \"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquantity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
-          ]
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -610,7 +593,7 @@
       "source": [
         "k=2"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -618,26 +601,30 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 35
         },
         "id": "fWlQXO3wf-xy",
-        "outputId": "a3b25ebc-d32d-4bcc-eb35-4539e9615b24"
+        "outputId": "5b2bd37c-ee04-48f8-ee9f-f6938d7d58f9"
       },
       "source": [
         "str(k)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-127-00594fcae11a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'2'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
         }
       ]
     },
